[tool.poetry]
name = "gnbg-hms"
version = "0.1.0"
description = ""
authors = ["WojtAcht <wachtelik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"
matplotlib = "^3.8.3"
pyhms = {git = "https://github.com/agh-a2s/pyhms", rev = "main"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
pre-commit = "^3.6.2"
nbformat = "^5.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
